[add] authorization to /users/:username/books
