# api/openapi.yaml
@@ -43,7 +43,7 @@ paths:
                     description: Cannot parse request body
                 "500":
                     description: Internal server error
-    /users/{username}/books:
+    /users/:username/books:
         post:
             tags:
                 - users
@@ -51,6 +51,8 @@ paths:
             summary: create a reading log
             description: That user whose username is 'username' reads a book. and create a reading log.
             parameters: []
+            security:
+                - bearerAuth: []
             requestBody:
                 description: books to create
                 content:
@@ -68,6 +70,8 @@ paths:
                     description: CREATED
                 "400":
                     description: Cannot parse request body
+                "401":
+                    description: Unauthorized
                 "500":
                     description: Internal server error
 
