# backend/server/main.go
@@ -16,7 +16,7 @@ func GetMux() http.Handler {
 	mux.GET("/hello", middleware.LogWrap(hello))
 	mux.POST("/users", middleware.LogWrap(postUser))
 	mux.GET("/auth_test", middleware.LogWrap(middleware.Auth(hello)))
-	mux.POST("/users/:username/books", middleware.LogWrap(read))
+	mux.POST("/users/:username/books", middleware.LogWrap(middleware.Auth(read)))
 	return mux
 }
 
